bright-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(program) { return new Program(program || []) },
      peg$c1 = function(head, tail) { return list(head, tail, 1) },
      peg$c2 = "=",
      peg$c3 = peg$literalExpectation("=", false),
      peg$c4 = function(i, e) { return new Conf(i, e); },
      peg$c5 = function(i, b) { return new Func(i, b); },
      peg$c6 = "{",
      peg$c7 = peg$literalExpectation("{", false),
      peg$c8 = "}",
      peg$c9 = peg$literalExpectation("}", false),
      peg$c10 = function(c) { return new Block(c || []) },
      peg$c11 = function(head, tail) {
            return list(head, tail, 1)
          },
      peg$c12 = /^[a-z]/,
      peg$c13 = peg$classExpectation([["a", "z"]], false, false),
      peg$c14 = /^[a-z0-9]/,
      peg$c15 = peg$classExpectation([["a", "z"], ["0", "9"]], false, false),
      peg$c16 = function(letters) {
            return letters[0] + letters[1].join("");
          },
      peg$c17 = /^[a-zA-Z]/,
      peg$c18 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c19 = "if",
      peg$c20 = peg$literalExpectation("if", false),
      peg$c21 = "elf",
      peg$c22 = peg$literalExpectation("elf", false),
      peg$c23 = "else",
      peg$c24 = peg$literalExpectation("else", false),
      peg$c25 = "loop",
      peg$c26 = peg$literalExpectation("loop", false),
      peg$c27 = function(e, b, el, last) {
            var elves = [[e, b]];
            if (el) {
              el.forEach(function (elf) {
                elves.push([elf[3], elf[5]]);
              });
            }
            return new If(elves, last && last[3]);
          },
      peg$c28 = ":",
      peg$c29 = peg$literalExpectation(":", false),
      peg$c30 = function(name, count, b) {
            return new Loop(name && name[0], count, b);
          },
      peg$c31 = function(i, v) {
            return new Assign(i, v);
          },
      peg$c32 = "+=",
      peg$c33 = peg$literalExpectation("+=", false),
      peg$c34 = function(i, t, v) {
            return new Mut(i, "ADD", v, t && t[1]);
          },
      peg$c35 = "-=",
      peg$c36 = peg$literalExpectation("-=", false),
      peg$c37 = function(i, t, v) {
            return new Mut(i, "SUB", v, t && t[1]);
          },
      peg$c38 = "or",
      peg$c39 = peg$literalExpectation("or", false),
      peg$c40 = function(left, right) {
            return new Binop("OR", left, right);
          },
      peg$c41 = "xor",
      peg$c42 = peg$literalExpectation("xor", false),
      peg$c43 = function(left, right) {
            return new Binop("XOR", left, right);
          },
      peg$c44 = "and",
      peg$c45 = peg$literalExpectation("and", false),
      peg$c46 = function(left, right) {
            return new Binop("AND", left, right);
          },
      peg$c47 = "==",
      peg$c48 = peg$literalExpectation("==", false),
      peg$c49 = function(left, right) {
            return new Binop("EQ", left, right);
          },
      peg$c50 = "!=",
      peg$c51 = peg$literalExpectation("!=", false),
      peg$c52 = function(left, right) {
            return new Binop("NEQ", left, right);
          },
      peg$c53 = "<",
      peg$c54 = peg$literalExpectation("<", false),
      peg$c55 = function(left, right) {
            return new Binop("LT", left, right);
          },
      peg$c56 = "<=",
      peg$c57 = peg$literalExpectation("<=", false),
      peg$c58 = function(left, right) {
            return new Binop("LTE", left, right);
          },
      peg$c59 = ">",
      peg$c60 = peg$literalExpectation(">", false),
      peg$c61 = function(left, right) {
            return new Binop("GT", left, right);
          },
      peg$c62 = ">=",
      peg$c63 = peg$literalExpectation(">=", false),
      peg$c64 = function(left, right) {
            return new Binop("GTE", left, right);
          },
      peg$c65 = "+",
      peg$c66 = peg$literalExpectation("+", false),
      peg$c67 = function(left, right) {
            return new Binop("ADD", left, right);
          },
      peg$c68 = "-",
      peg$c69 = peg$literalExpectation("-", false),
      peg$c70 = function(left, right) {
            return new Binop("SUB", left, right);
          },
      peg$c71 = "*",
      peg$c72 = peg$literalExpectation("*", false),
      peg$c73 = function(left, right) {
            return new Binop("MUL", left, right);
          },
      peg$c74 = "/",
      peg$c75 = peg$literalExpectation("/", false),
      peg$c76 = function(left, right) {
            return new Binop("DIV", left, right);
          },
      peg$c77 = "%",
      peg$c78 = peg$literalExpectation("%", false),
      peg$c79 = function(left, right) {
            return new Binop("MOD", left, right);
          },
      peg$c80 = function(right) { return new Unop("NEG", right) },
      peg$c81 = "not",
      peg$c82 = peg$literalExpectation("not", false),
      peg$c83 = function(right) { return new Unop("NOT", right) },
      peg$c84 = "(",
      peg$c85 = peg$literalExpectation("(", false),
      peg$c86 = ")",
      peg$c87 = peg$literalExpectation(")", false),
      peg$c88 = function(e) { return e },
      peg$c89 = /^[\-+]/,
      peg$c90 = peg$classExpectation(["-", "+"], false, false),
      peg$c91 = /^[0-9]/,
      peg$c92 = peg$classExpectation([["0", "9"]], false, false),
      peg$c93 = function(digits) {
            return new Integer(parseInt((digits[0]||"") + digits[1].join(""), 10))
          },
      peg$c94 = function(i) { return new Variable(i) },
      peg$c95 = function(i, a) {
            return new Call(i, a || []);
          },
      peg$c96 = ",",
      peg$c97 = peg$literalExpectation(",", false),
      peg$c98 = function(head, tail) {
            return list(head, tail, 3)
          },
      peg$c99 = function() { return },
      peg$c100 = /^[ \t\r\n]/,
      peg$c101 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c102 = "//",
      peg$c103 = peg$literalExpectation("//", false),
      peg$c104 = /^[^\r\n]/,
      peg$c105 = peg$classExpectation(["\r", "\n"], true, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3;

    var key    = peg$currPos * 31 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseProgram();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseProgram() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 31 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseDeclaration();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse__();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseDeclaration();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseDeclaration();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseDeclaration() {
    var s0;

    var key    = peg$currPos * 31 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseConfiguration();
    if (s0 === peg$FAILED) {
      s0 = peg$parseFunction();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseConfiguration() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 31 + 3,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseident();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c2;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseInteger();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c4(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseFunction() {
    var s0, s1, s2, s3;

    var key    = peg$currPos * 31 + 4,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseident();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseblock();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseblock() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 31 + 5,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
